# nekit.dev

./: .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE  MANIFEST.in  README.md  SECURITY.md  build.rs  changelogging.toml  index.html  nginx.conf  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  tailwind.config.ts  tailwind.css
assets/: manifest.json  tailwind.css
assets/keys/: personal.key
nekitdev/: __init__.py  __main__.py  constants.py  core.py  errors.py  main.py  projects.py  tailwind.config.js  typing.py  utils.py
nekitdev/endpoints/: __init__.py  docs.py  email.py  github.py  index.py  keys.py  redirect.py
nekitdev/keys/: security.key
nekitdev/modules/: __init__.py  docs.py  email.py  github.py  home.py  keys.py  redirect.py
nekitdev/routes/: __init__.py  docs.py  github.py  home.py  keys.py  redirect.py
nekitdev/static/: manifest.json  nekitdev.webmanifest
nekitdev/static/css/: output.css  repository_dot.css
nekitdev/templates/: base.html  error.html  home.html  index.html
src/: age.rs  app.rs  chrono.rs  keys.rs  lib.rs  links.rs  main.rs  redirects.rs  routes.rs  security.rs  urls.rs
src/components/: head.rs  mod.rs  project.rs  skill.rs
src/routes/: docs.rs  email.rs  keys.rs  mod.rs  projects.rs
src/templates/: base.rs  index.rs
src/views/: blog.rs  home.rs  mod.rs  not_found.rs  projects.rs  security.rs
static/: manifest.json
static/css/: input.css  output.css
static/keys/: security.key
