[package]
name = "nekit-dev"
version = "0.1.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/nekitdev/nekit.dev"
license = "MIT"
publish = false

[dependencies.axum]
version = "0.8.4"

[dependencies.chrono]
version = "0.4.41"

[dependencies.clap]
version = "4.5.40"
features = ["derive"]

[dependencies.maud]
version = "0.27.0"
features = ["axum"]

[dependencies.miette]
version = "7.6.0"
features = ["fancy"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.thiserror]
version = "2.0.12"

[dependencies.tokio]
version = "1.46.1"
features = ["full"]

[dependencies.tower-http]
version = "0.6.6"
features = ["full"]
