[package]
name = "nekit-dev"
version = "0.1.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.90"
readme = "README.md"
repository = "https://github.com/nekitdev/nekit.dev"
license = "MIT"
publish = false

[dependencies.chrono]
version = "0.4.42"

[dependencies.dioxus]
version = "0.7.0-rc.3"
features = ["fullstack", "router"]

[dependencies.non-empty-str]
version = "0.11.3"
features = ["serde"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.thiserror]
version = "2.0.17"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
