[package]
name = "nekit-dev"
version = "0.1.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
rust-version = "1.90"
readme = "README.md"
repository = "https://github.com/nekitdev/nekit.dev"
license = "MIT"
publish = false

[dependencies.chrono]
version = "0.4.42"

[dependencies.dioxus]
version = "0.7.1"
features = ["fullstack", "router"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
