[tool.poetry]
name = "nekit.dev"
version = "1.0.0"
description = "nekit.dev - Personal website written in Python."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/nekit.dev"
repository = "https://github.com/nekitdev/nekit.dev"

keywords = ["python", "web", "nekitdev"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Funding = "https://patreon.com/nekitdev"
Issues = "https://github.com/nekitdev/nekit.dev/issues"

[[tool.poetry.packages]]
include = "nekitdev"

[tool.poetry.scripts]
"nekit.dev" = "nekitdev.main:nekitdev"

[tool.poetry.dependencies]
python = ">= 3.8"
fastapi = ">= 0.104.1"
jinja2 = ">= 3.1.2"
attrs = ">= 23.1.0"
click = ">= 8.1.7"
entrypoint = ">= 1.4.0"
pendulum = ">= 2.1.2"
typing-aliases = ">= 1.1.3"

[tool.poetry.dependencies.uvicorn]
version = ">= 0.24.0"
extras = ["standard"]

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "23.11.0"
flake8-pyproject = "1.2.3"

[tool.poetry.group.format.dependencies.flake8]
version = "6.1.0"
python = ">= 3.8.1"

[tool.poetry.group.format.dependencies.isort]
version = "5.12.0"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "1.7.0"

[tool.poetry.group.dev.dependencies]
changelogging = "1.3.0"

[tool.black]
line_length = 100

[tool.flake8]
max_line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[tool.changelogging]
name = "nekit.dev"
version = "1.0.0"
url = "https://github.com/nekitdev/nekit.dev"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.8.1"]
build-backend = "poetry.core.masonry.api"
