[tool.poetry]
name = "nekit.dev"
version = "1.0.0"
description = "nekit.dev - Personal website written in Python."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/nekit.dev"
repository = "https://github.com/nekitdev/nekit.dev"

keywords = ["python", "web", "nekitdev"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Issues = "https://github.com/nekitdev/nekit.dev/issues"

[[tool.poetry.packages]]
include = "nekitdev"

[tool.poetry.scripts]
"nekit.dev" = "nekitdev.main:nekitdev"

[tool.poetry.dependencies]
python = ">= 3.8"
fastapi = "^0.108.0"
jinja2 = "^3.1.2"
attrs = "^23.2.0"
click = "^8.1.7"
entrypoint = "^2.0.0"
pendulum = "^3.0.0"
typing-aliases = "^1.4.1"
typing-extensions = "^4.9.0"

[tool.poetry.dependencies.uvicorn]
version = "^0.25.0"

[tool.poetry.group.format.dependencies]
ruff = "0.1.11"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.changelogging]
name = "nekit.dev"
version = "1.0.0"
url = "https://github.com/nekitdev/nekit.dev"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.8.1"]
build-backend = "poetry.core.masonry.api"
